@@ -1,3 +1,9 @@
+2018-09-07  Andrew Burgess  <andrew.burgess@embecosm.com>
+
+	* gdb.base/commands.exp (user_defined_command_arg_quoting): New
+	proc, which is added to the list of procs to call.
+	* gdb.base/run.c (global_var): Defined global.
+
 2018-09-05  Tom de Vries  <tdevries@suse.de>
 
 	* gdb.dwarf2/varval.exp: Add test.
